--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,44 +1,35 @@
-# Define the name of the workflow
 name: Playwright Tests
 
-# Define when the workflow should run
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: [push, pull_request]
+# on:
+#   push:
+#     branches:
+#       - main
+#   pull_request:
+#     branches:
+#       - main
 
-# Define the jobs to be run
 jobs:
   test:
-    # Define the operating system the job will run on
     runs-on: ubuntu-latest
-
-    # Define the steps to be run
     steps:
-      # Checkout the repository
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      # Set up Node.js environment
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: '14'
+          node-version: 18
 
-      # Install dependencies
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
-      # Run Playwright tests
       - name: Run Playwright tests
-        run: npx playwright test
+        run: npm test
 
       - uses: actions/upload-artifact@v4
         if: always()
         with:
           name: playwright-report
           path: playwright-report/
-          retention-days: 30
+          retention-days: 3
