--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install Playwright Drivers
+        run: npx playwright install
+
       - name: Run Playwright tests
         run: npm test
 
