--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -9,6 +9,10 @@ on: [push, pull_request]
 #     branches:
 #       - main
 
+concurrency:
+  group: "Playwright Tests-${{ github.ref }}"
+  cancel-in-progress: true
+
 jobs:
   test:
     runs-on: ubuntu-latest
