--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -33,7 +33,7 @@ jobs:
         run: npx playwright install
 
       - name: Run Playwright tests
-        run: playwright test --grep "@${{ env.TAG }}"
+        run: npx playwright test --grep "@${{ env.TAG }}"
 
       - uses: actions/upload-artifact@v4
         if: always()
